# geometry

./: .gitignore  README.md  derBasisFun.onepkg
3rd/eigen/include/eigen3/Eigen/: Core
3rd/eigen/include/eigen3/Eigen/src/Core/: MatrixBase.h
3rd/eigen/include/eigen3/Eigen/src/Core/arch/AVX/: PacketMath.h
3rd/eigen/include/eigen3/Eigen/src/Core/arch/AltiVec/: MatrixProduct.h  MatrixProductCommon.h  MatrixProductMMAbfloat16.h  MatrixVectorProduct.h  PacketMath.h
3rd/eigen/include/eigen3/Eigen/src/Core/arch/SSE/: PacketMath.h
3rd/eigen/include/eigen3/Eigen/src/Core/util/: Macros.h
3rd/eigen/include/eigen3/Eigen/src/Geometry/: EulerAngles.h
3rd/eigen/include/eigen3/unsupported/Eigen/CXX11/src/Tensor/: TensorEvaluator.h
3rd/eigen/include/eigen3/unsupported/Eigen/src/SpecialFunctions/: SpecialFunctionsImpl.h
code/: CMakeLists.txt  debug_used.cpp  debug_used.h  nurbs_test.cpp  test.cpp  test2.cpp
code/include/Geo/: bezier_curve.h  bezier_surface.h  cone.h  contruct_primitive_nurbs_surface.h  convert_nubrs_with_polynomial.h  create_nurbs_arc.h  curve.h  declare.h  discret.h  fit_nurbs.h  line.h  nurbs_build.h  nurbs_curve.h  nurbs_surface.h  plane.h  polynomial_curve.h  polynomial_surface.h  surface.h
code/include/NurbsTools/: declare.h  nurbs_tool.h
code/include/Topo/: build.h  delaunay.h  edge.h  euler.h  face.h  globalSymbol.h  gwballocation.h  halfedge.h  loop.h  nodes.h  params.h  query.h  solid.h  vertex.h
code/include/tools/: planeequ.h  split.h
code/src/Geo/: CMakeLists.txt  curve.cpp  surface.cpp
code/src/Topo/: CMakeLists.txt  build.cpp  delaunay.cpp  edge.cpp  euler.cpp  face.cpp  gwballocation.cpp  loop.cpp  params.cpp  query.cpp  solid.cpp  vertex.cpp
code/src/tools/: CMakeLists.txt  planeequ.cpp  split.cpp
geometry/: CMakeLists.txt  build_cube_test.cpp  debug_used.cpp  debug_used.h  intersection_curve_test.cpp  kdtree_test.cpp  nurbs_test.cpp  test2.cpp
geometry/include/Geo/: bezier_curve.h  bezier_curve_int.h  bezier_surface.h  cone.h  create_nurbs_arc.h  discret.h  fit_nurbs.h  intcurve.h  interval_alogrithm.h  nearest.h  nurbs_build.h  nurbs_curve.h  nurbs_surface.h  plane.h  polynomial_curve.h  polynomial_surface.h  surface.h  vodes.h
geometry/include/NurbsTools/: convex_hell.h  declare.h  kdtree.h  nurbsTool.h  nurbs_tool.h
geometry/include/Topo/: delaunay.h  euler.h  geodef.h  gwballocation.h  params.h  solid.h
geometry/include/tools/: bool.h  split.h  triangulation.h
geometry/src/Geo/: CMakeLists.txt  curve.cpp  line.cpp  plane.cpp  surface.cpp
geometry/src/Topo/: CMakeLists.txt  edge.cpp  euler.cpp  face.cpp  gwballocation.cpp  halfedge.cpp  solid.cpp  vertex.cpp
geometry/src/tools/: split.cpp
include/: bezier.h  bspline.h  curve.h  curvetype.h  entity.h  kMath.h  line.h  point.h  surface.h
intersectData/: BEZIER_INTtest10.json  BEZIER_INTtest12.json  BEZIER_INTtest16.json  BEZIER_INTtest17.json  BEZIER_INTtest2.json  BEZIER_INTtest3.json  BEZIER_INTtest4.json  BEZIER_INTtest5.json  BEZIER_INTtest6.json  BEZIER_INTtest7.json  BEZIER_INTtest8.json  BEZIER_INTtest9.json
nodeGraph/: CMakeLists.txt
nodeGraph/include/: InterpolateCurve.hpp  MergeNode.hpp  NodeGraph.hpp  node.hpp  numberNode.hpp  parameter.hpp  pointNode.hpp
nodeGraph/src/: CMakeLists.txt  InterpolateCurve.cpp  MergeNode.cpp  NodeGraph.cpp  node.cpp  numberNode.cpp  parameter.cpp  pointNode.cpp
service/: CMakeLists.txt  ReadJson.cpp  ReadJson.hpp  libhv.h  test.cpp
source/: bezier.cpp  curve.cpp  line.cpp  point.cpp
